--- a/index.html
+++ b/index.html
@@ -1,46 +1,72 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html lang="pt-br">
 	<head>
-		<meta charset="utf-8">
+		<meta charset="UTF-8">
+
 		<title>Calculadora em PHP</title>
+
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+		<!-- bootstrap - link cdn -->
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+		<link rel="stylesheet" type="text/css" href="./css/estilo.css">
+
+		<script src="./js/app.js"></script>
 	</head>
+
 	<body>
+		
+		<div class="container">
+			<div class="jumbotron">
+				<h1>CALCULADORA</h1>
+			</div>
 
-		<form method="post" action="calcular.php">
-			<label for="numero1">
-				Primeiro número:
-				<input type="text" name="numero1" id="numero1">
-			</label>
+			<hr>
 
-			<label for="numero2">
-				Segundo número:
-				<input type="text" name="numero2" id="numero2">
-			</label>
+			<form method="post" action="./calcular.php">
 
-			Operação:<br>
+				<div class="row">
+					<div class="col-md-4">
+						<input type="number" name="numero1" class="form-control" placeholder="Digite um número">
+					</div>
 
-			<label>
-				<input type="radio" name="operacao" value="somar">
-				Somar
-			</label>
+					<div class="col-md-4 mt-2 mt-md-0">
+						<select class="form-control" name="operacao">
+							<option value="">--Selecione uma operação</option>
+							<option value="somar">Adição</option>
+							<option value="subtrair">Subtração</option>
+							<option value="multiplicar">Multiplicação</option>
+							<option value="dividir">Divisão</option>
+						</select>
+					</div>
 
-			<label>
-				<input type="radio" name="operacao" value="subtrair">
-				Subtrair
-			</label>
+					<div class="col-md-4 mt-2 mt-md-0">
+						<input type="number" name="numero2" class="form-control" placeholder="Digite um número">
+					</div>
+				</div>
 
-			<label>
-				<input type="radio" name="operacao" value="multiplicar">
-				Multiplicar
-			</label>
+				<hr>
 
-			<label>
-				<input type="radio" name="operacao" value="dividir">
-				Dividir
-			</label>
+				<div class="row">
+					<div class="col-md-4"></div>
 
-			<button type="bubmit">Calcular</button>
-		</form>
+					<div class="col-md-4"></div>
 
+					<div class="col-md-4">
+						<button type="submit" class="btn btn-lg btn-primary float-right">Calcular</button>
+					</div>
+				</div>
+
+			</form>
+
+			<hr>
+
+			<div class="card">
+				<div class="card-header">
+					Resultado: <input type="text" id="resultado" class="form-control" readonly>
+				</div>
+			</div>
+		</div>
 	</body>
 </html>
